--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,27 @@
             "email": "sam.stenvall@digia.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/klaari/laravel-lost-interfaces.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https:https://github.com/klaari/lumen-contentful.git"
+         }
+    ],
     "require": {
         "php": ">=7.1",
-        "jalle19/laravel-lost-interfaces": "^1.2",
-        "laravel/lumen-framework": "^5.4|^6.0",
-        "nordsoftware/lumen-contentful": "^4.2",
-        "nordsoftware/lumen-newrelic": "^2.0",
+        "jalle19/laravel-lost-interfaces": "dev-master as 1.2",
+        "laravel/lumen-framework": "^5.4|^6.0|^7.0|^8.0|^9.0",
+        "nordsoftware/lumen-contentful": "dev-master as 4.2",
+        "nordsoftware/lumen-newrelic": "^4.1",
         "digiaonline/json-helpers": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
-        "phpstan/phpstan": "^0.9.2"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^1.9.2"
     },
     "autoload": {
         "psr-4": {
